src/polychem/snapshots/smithereens__polychem__chemical_database__tests__decimal_from_bool.snap
---
source: src/polychem/chemical_database.rs
expression: out
---
  × error parsing KDL

Error:   × expected a decimal number, found boolean
   ╭─[test:1:10]
 1 │ lossless true
   ·          ──┬─
   ·            ╰── unsupported value
   ╰────

